feat: Introduce initial CLI client, RAG system, and data sources for Slack, Jira, and Confluence.

--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,11 @@
 dotenv
 
 # Load Poetry virtual environment
-layout poetry
+# Get Poetry virtual environment path and activate it
+if command -v poetry >/dev/null 2>&1; then
+    export VIRTUAL_ENV=$(poetry env info --path)
+    export PATH="$VIRTUAL_ENV/bin:$PATH"
+    echo "Poetry virtual environment activated: $VIRTUAL_ENV"
+else
+    echo "Poetry not found. Please install Poetry first."
+fi
