--- a/env.example
+++ b/env.example
@@ -1,1 +1,43 @@
 # Environment configuration example
+
+# AWS Bedrock Configuration (DSPy RAG supports ONLY bearer token or profile)
+# Region is required
+AWS_REGION=your AWS region
+AWS_PROFILE=your AWS profile for Bedrock # used if bearer token not set
+
+# DSPy / Bedrock runtime
+# Use EITHER bearer token or AWS profile; access keys are not supported here
+# Example region
+# AWS_REGION=us-east-1
+
+# Access keys and profiles are not used by DSPy RAG scripts
+# (they may still be used by other parts of the project like LangChain PoC)
+
+# Amazon Bedrock API Key (Bearer token) for DSPy scripts:
+# See: https://docs.aws.amazon.com/bedrock/latest/userguide/api-keys-use.html
+# AWS_BEARER_TOKEN_BEDROCK=bedrock_api_key_value
+
+# LangChain Configuration
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_API_KEY=your_langsmith_api_key_here
+
+# JIRA Configuration
+JIRA_USER=your_jira_email@company.com
+JIRA_API_TOKEN=your_jira_api_token_here
+JIRA_INSTANCE_URL=https://yourcompany.atlassian.net
+JIRA_CLOUD=True
+
+# Confluence Configuration
+CONFLUENCE_ROOT=your_confluence_root_page_id
+
+# Slack Configuration
+SLACK_BOT_TOKEN=xoxb-your_bot_token
+SLACK_USER_TOKEN=xoxp-your_user_token_optional
+SLACK_CHANNEL_TYPES=public_channel,private_channel,im,mpim
+SLACK_OLDEST_TIMESTAMP=
+
+# GitLab Configuration
+GITLAB_URL=https://gitlab.com
+GITLAB_TOKEN=your_gitlab_access_token
+# Comma-separated numeric project IDs, e.g. 123,456
+GITLAB_PROJECT_IDS=
