ci: configure codespell action to check `src` and `tests` directories

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,3 +188,5 @@ jobs:
 
       - name: Run codespell
         uses: codespell-project/actions-codespell@v2
+        with:
+          path: src tests
