--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           poetry run pytest \
             --cov=src \
             --cov-report=xml \
+            --cov-report=html \
             --junitxml=pytest-report.xml
 
       - name: Enforce minimum coverage
@@ -94,6 +95,13 @@ jobs:
           name: python-package-${{ matrix.python-version }}
           path: dist/
 
+      - name: Upload coverage report (HTML)
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html-${{ matrix.python-version }}
+          path: htmlcov/
+
+
   security_sca:
     name: Dependency security audit (pip-audit)
     runs-on: ubuntu-latest
@@ -115,6 +123,10 @@ jobs:
         run: |
           poetry install --no-interaction --no-ansi
 
+      - name: Generate pip-audit text report
+        run: |
+          poetry run pip-audit --desc > pip-audit.txt || true
+
       - name: Run pip-audit (JSON report)
         run: |
           poetry run pip-audit -f json -o pip-audit.json
@@ -123,7 +135,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: security-audit
-          path: pip-audit.json
+          path: |
+            pip-audit.json
+            pip-audit.txt
 
   sast_bandit:
     name: SAST - Bandit
@@ -142,6 +156,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install bandit
 
+      - name: Generate Bandit HTML report
+        run: |
+          bandit -r . -f html -o bandit-report.html || true
+
       - name: Run Bandit (JSON report)
         run: |
           bandit -r . -f json -o bandit-report.json || true
@@ -150,7 +168,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
-          path: bandit-report.json
+          path: |
+            bandit-report.json
+            bandit-report.html
 
   sast_semgrep:
     name: SAST - Semgrep
@@ -169,15 +189,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep (CI rules, SARIF)
+      - name: Run Semgrep (CI rules, SARIF & Text)
         run: |
-          semgrep --config p/ci --sarif-output=semgrep.sarif || true
+          semgrep --config p/ci --sarif-output=semgrep.sarif --text > semgrep.txt || true
 
-      - name: Upload Semgrep report (SARIF)
+      - name: Upload Semgrep report (SARIF & Text)
         uses: actions/upload-artifact@v4
         with:
           name: semgrep-sast
-          path: semgrep.sarif
+          path: |
+            semgrep.sarif
+            semgrep.txt
 
   codespell:
     name: Check spelling (codespell)
@@ -208,3 +230,94 @@ jobs:
         with:
           name: sbom
           path: sbom.cyclonedx.json
+
+  complexity:
+    name: Code Complexity (Radon)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Radon
+        run: pip install radon
+
+      - name: Run Radon CC
+        run: radon cc src -a -na > radon-cc.txt
+
+      - name: Run Radon MI
+        run: radon mi src > radon-mi.txt
+
+      - name: Upload Radon CC Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: radon-cc-report
+          path: radon-cc.txt
+
+      - name: Upload Radon MI Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: radon-mi-report
+          path: radon-mi.txt
+
+  duplication:
+    name: Code Duplication (jscpd)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run jscpd
+        run: npx jscpd src --min-tokens 50 --min-lines 5 --reporters json,html,console --output ./jscpd-report
+
+      - name: Upload jscpd Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jscpd-report
+          path: jscpd-report/
+
+  quality:
+    name: Code Quality (Mypy & Ruff)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Poetry & Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --no-interaction --no-ansi
+          poetry run pip install lxml # Required for mypy html report
+
+      - name: Run Mypy (HTML Report)
+        run: |
+          poetry run mypy src --html-report mypy_report || true
+
+      - name: Upload Mypy Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: mypy-report
+          path: mypy_report/
+
+      - name: Run Ruff (Text Report)
+        run: |
+          poetry run ruff check src --output-format=json --output-file=ruff-report.json || true
+          poetry run ruff check src --output-format=full > ruff-report.txt || true # Use redirect for text output
+
+      - name: Upload Ruff Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: ruff-report
+          path: |
+            ruff-report.json
+            ruff-report.txt
