--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ pip-audit = "^2.9.0"
 pytest-cov = "^6.0.0"
 types-requests = "^2.32.4"
 types-PyYAML = "^6.0.12"
+radon = "^6.0.1"
+lxml = "^6.0.2"
 
 [build-system]
 requires = ["poetry-core"]
