feat: Add Confluence HTML recursion error fallback with a new test, and update source configurations to use environment variables.

--- a/env.example
+++ b/env.example
@@ -17,27 +17,26 @@ AWS_PROFILE=your AWS profile for Bedrock # used if bearer token not set
 # See: https://docs.aws.amazon.com/bedrock/latest/userguide/api-keys-use.html
 # AWS_BEARER_TOKEN_BEDROCK=bedrock_api_key_value
 
-# LangChain Configuration
-LANGCHAIN_TRACING_V2=true
-LANGCHAIN_API_KEY=your_langsmith_api_key_here
-
 # JIRA Configuration
 JIRA_USER=your_jira_email@company.com
 JIRA_API_TOKEN=your_jira_api_token_here
 JIRA_INSTANCE_URL=https://yourcompany.atlassian.net
-JIRA_CLOUD=True
+JIRA_PROJECTS=PROJ1,PROJ2
 
 # Confluence Configuration
-CONFLUENCE_ROOT=your_confluence_root_page_id
+CONFLUENCE_SPACES=SPACE1,SPACE2
 
 # Slack Configuration
 SLACK_BOT_TOKEN=xoxb-your_bot_token
 SLACK_USER_TOKEN=xoxp-your_user_token_optional
 SLACK_CHANNEL_TYPES=public_channel,private_channel,im,mpim
-SLACK_OLDEST_TIMESTAMP=
+SLACK_WORKSPACE_DOMAIN=https://your_workspace.slack.com
 
 # GitLab Configuration
 GITLAB_URL=https://gitlab.com
 GITLAB_TOKEN=your_gitlab_access_token
 # Comma-separated numeric project IDs, e.g. 123,456
 GITLAB_PROJECT_IDS=
+
+# Logging
+LOG_LEVEL=INFO
