--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,7 @@ repos:
     hooks:
       - id: mypy
         language_version: python3.12
-        # additional_dependencies: [types-all]
+        additional_dependencies: [pytest, pydantic]
         args: [--ignore-missing-imports]
         exclude: ^pocs/
 
