--- a/env.example
+++ b/env.example
@@ -40,3 +40,7 @@ GITLAB_PROJECT_IDS=
 
 # Logging
 LOG_LEVEL=INFO
+
+# Qdrant Configuration
+# API key for Qdrant authentication (optional for local dev, required for production)
+QDRANT_API_KEY=
