--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ langchain-community = "^0.4.1"
 langchain-aws = "^1.1.1"
 langchain-huggingface = "^1.2.0"
 langchain-text-splitters = "^1.1.0"
-faiss-cpu = "^1.12.0"
+faiss-cpu = "^1.12.0"  # TODO: Remove after Qdrant migration is complete and verified
+qdrant-client = "^1.16.2"
+langchain-qdrant = "^1.1.0"
 sentence-transformers = "^5.1.2"
 spacy = "^3.8.7"
 slack-sdk = "^3.37.0"
