feat: Add Gemini LLM backend support and make LLM configurable via CLI and configuration file.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -103,7 +103,8 @@ repos:
     rev: v2.7.3
     hooks:
       - id: pip-audit
-        entry: poetry run pip-audit --ignore-vuln CVE-2025-68664
+        entry: poetry run pip-audit
+        #args: ["--ignore-vuln", "CVE-2025-68664"]
         language: system
         pass_filenames: false
 
