--- a/env.example
+++ b/env.example
@@ -44,3 +44,6 @@ LOG_LEVEL=INFO
 # Qdrant Configuration
 # API key for Qdrant authentication (optional for local dev, required for production)
 QDRANT_API_KEY=
+
+# Google API Key for Gemini
+GEMINI_API_KEY=
