--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ rich = "^14.2.0"
 prometheus-client = "^0.23.1"
 pyyaml = "^6.0.3"
 pydocstyle = "^6.3.0"
+google-genai = "1.56.0"
+langchain-google-genai = "4.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
