refactor: introduce `AgentTool` base class for modular RAG agent tools and simplify agent state management.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -104,7 +104,7 @@ repos:
     hooks:
       - id: pip-audit
         entry: poetry run pip-audit
-        #args: ["--ignore-vuln", "CVE-2025-68664"]
+        #args: ["--ignore-vuln", "CVE-2025-68664"] To disable vulns
         args: ["--ignore-vuln", "CVE-2025-69872"]
         language: system
         pass_filenames: false
