chore: Update vulns ignored

--- a/.pip-audit-ignore
+++ b/.pip-audit-ignore
@@ -12,6 +12,7 @@
 # Revisit when a patched version of the affected dependency is released.
 CVE-2025-69872
 
-# CVE-2026-27794: Fix available, although main dependency does not include yet
-# Revisit when a patched version of the main dependency is released.
+# CVE-2026-27794: Fix available in langgraph-checkpoint dependency
+# But not in dependency langgraph
+# Revisit when a patched version of langgraph is released.
 CVE-2026-27794
