--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Personal AI Assistant"
 authors = ["JuanFran Adame <juanfran.adame@gmail.com>"]
 readme = "README.md"
 packages = [{include = "src"}]
+license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.14"
